--- a/Error.html
+++ b/Error.html
@@ -9,7 +9,8 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" id="logo"><img src="images/logoESCA.png" alt="Logo"></a>
+				<a href="index.html" id="logo"><img src="images/logo.png" alt="Logo" height=60></a>
+                <span id="school">ESCA TEPEPAN</span>
 				<ul id="navigation">
 					<li>
 						<a href="index.html">Inicio</a>
@@ -29,10 +30,9 @@
 		</div>
         <div id="contents">
             <div>
-                <h1>Lo sentimos, se ha producido un error :(</h1>
-				</br>
+                <h1>Lo sentimos, se ha producido un error :(</h1><br>
 				<h2> Ingresa correctamente tus datos o búscanos en nuestras redes sociales para mayor información</h2>
-        </div>
+            </div>
         </div>
     <div id="footer">
 			<span class="shadow"></span>
