--- a/acerca.html
+++ b/acerca.html
@@ -9,7 +9,8 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" id="logo"><img src="images/logoESCA.png" alt="Logo"></a>
+				<a href="index.html" id="logo"><img src="images/logo.png" alt="Logo" height=60></a>
+                <span id="school">ESCA TEPEPAN</span>
 				<ul id="navigation">
 					<li>
 						<a href="index.html">Inicio</a>
@@ -31,7 +32,7 @@
 			<div id="about">
 				<img src="images/ESCA.jpg" alt="Img" class="frame1">
                 <br><br>
-				<h2>Acerca de nosotros</h2>
+				<h2 align=center>Acerca de nosotros</h2>
 				<ul>
 					<li>
 						<h4>Nuestro prop&oacutesito</h4>
