--- a/contrasenia.html
+++ b/contrasenia.html
@@ -9,7 +9,8 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" id="logo"><img src="images/logoESCA.png" alt="Logo"></a>
+				<a href="index.html" id="logo"><img src="images/logo.png" alt="Logo" height=60></a>
+                <span id="school">ESCA TEPEPAN</span>
 				<ul id="navigation">
 					<li>
 						<a href="index.html">Inicio</a>
@@ -28,22 +29,17 @@
 			<span class="shadow"></span>
 		</div>
 		<div id="contents">
-			<div id="olvide contraseña">
-				<form action="index.html" method="post">
-					<br></br>
-					<br></br>
-					<h2></h2>
-					<label>Correo electronico</label>
-					<input type="text" value="" class="txtfield">
-					<br></br>
-					<input type="Submit" value="Enviar Contraseña" class="btn">
-					<br></br>
-					<br></br>
-					<br></br>
-					<br></br>
-				</form>
-			</div>
-		</div>
+            <div id="body">
+                <h2>Olvidé mi contraseña</h2>
+                <div id="forms">
+                    <form method="post" name="" id="" class="form">
+                        <label>Correo electrónico</label>
+                        <input type="text" name="username" id="username" class="txtfield" required><br>
+                        <input type="submit" value="Enviar" class="btn" name="submit" id="submit" onclick="">
+                    </form>
+                </div>
+            </div>
+        </div>
 		<div id="footer">
 			<span class="shadow"></span>
 			<div>
