--- a/inicioalumno.html
+++ b/inicioalumno.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-	<title>SED</title>
+	<title>Inicio Alumno</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
@@ -12,14 +12,14 @@
 				<a href="index.html" id="logo"><img src="images/logo.png" alt="Logo" height=60></a>
                 <span id="school">ESCA TEPEPAN</span>
 				<ul id="navigation">
-					<li class="selected">
+					<li>
 						<a href="index.html">Inicio</a>
 					</li>
 					<li>
 						<a href="registro.html">Registro</a>
 					</li>
-					<li>
-						<a href="signin.html">Iniciar sesión</a>
+					<li class="selected">
+						<a href="inicioalumno.html">Alumno</a>
 					</li>
 					<li>
 						<a href="acerca.html">Acerca</a>
@@ -29,42 +29,42 @@
 			<span class="shadow"></span>
 		</div>
 		<div id="contents">
-			<div id="body">
-                <h2>Bienvenido a la plataforma SED</h2>
-				<img src="images/ESCA.jpg" alt="ESCA" class="frame1">
-                  <div id="news">
-					<h3>Noticias</h3>
-					<ul>
-						<li>
-							<p>
-								Esta es una línea donde hay noticias
-							</p>
-						</li>
-						<li>
-							<p>
-								Una noticia podría ser que ya está funcionando este sistema
-							</p>
-						</li>
-					</ul>
+            <div id="body">
+                <div id="leftpane">
+                    <div>
+                        <h3>Cursos</h3>
+						<ul>
+                            <li><a href="dmerca.html" target="iframe_a">Derecho mercantil</a></li>
+                            <li><a href="error.html" target="iframe_a">Operaciones de Comercio Exterior</a></li>
+                            <li><a href="error.html" target="iframe_a">Análisis de Mercados Internacionales</a></li>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div>
+                        <h3>Noticias</h3>
+                        <ul>
+                            <li>Esta es una noticia</li>
+							<li>Ya sirve el sistema</li>
+                        </ul>
+                    </div>
 				</div>
-				<div id="updates">
-					<h3>Actualizaciones</h3>
-					<ul>
-						<li>
-							<span class="time">Junio 4-8 7am-9am</span>
-                            <a href="error.html">Derecho mercantil</a><br>Relaciones Comerciales
-						</li>
-						<li>
-							<span class="time">Junio 11-15 8am-10am</span>
-                            <a href="error.html">Operaciones de Comercio Exterior</a><br>Negocios Internacionales
-						</li>
-                        <li>
-							<span class="time">Junio 20-25 10am-12am</span>
-                            <a href="error.html">Análisis de Mercados Internacionales</a><br>Negocios Internacionales
-						</li>
-					</ul>
+				<div id="middlepane">
+					<h2>Bienvenido </h2>
+                    <input type="button" value="<< Volver" onclick="window.history.back();">
+					<iframe src="blank.html" name="iframe_a" height="450px" width="499px"></iframe>
 				</div>
-			</div>
+                <div id="rightpane">
+					<h3>Calendario de Actividades</h3>
+                    <script type="text/javascript" charset="utf-8">
+                        new Kalendae(document.body, {
+                            months:1, mode:'single', selected:Kalendae.moment().subtract({M:1})
+                        });
+                    </script>
+					<p>Calendario</p>
+                    <hr>
+                    <h3>Repositorio</h3>
+				</div>
+            </div>
 		</div>
 		<div id="footer">
 			<span class="shadow"></span>
