--- a/registro.html
+++ b/registro.html
@@ -1,59 +1,57 @@
 <!DOCTYPE html>
-
 <html lang="es">
 <head>
     <meta charset="UTF-8">
 	<title>Registro</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
-<script type="text/javascript">
-
-function registro(){
-	$('#myForm').submit(function(e){
-		e.stopImmediatePropagation();
-		var data = $('#myForm').serialize();
-		var boleta = document.getElementById("Boleta").value;  
-		var nombre = document.getElementById("Nombre").value;
-		var dire = document.getElementById("Dire").value;
-		var pass = document.getElementById("pass").value;
-		if(boleta != "" && nombre != "" && dire != "" && pass != ""){
-			$.ajax({
-				url: "scripts/insert.php",
-				type: "POST",
-				cache: false,
-				data: data,
-				success: function(data)
-				{
-					if(data == 1)
-					{
-						alert("Se realizo correctamente el registro");
-						window.location.href = "signin.html";
-					}
-					else
-					{
-						alert("No se pudo hacer el registro, intentelo nuevamente");
-					}
-				},
-				error: function(){
-					alert('ERROR');
-				}
-			});
-		}
-		return false;
-	});
-}
-
-</script>
+    <script type="text/javascript">
+        function registro(){
+            $('#myForm').submit(function(e){
+                e.stopImmediatePropagation();
+                var data = $('#myForm').serialize();
+                var boleta = document.getElementById("Boleta").value;
+                var nombre = document.getElementById("Nombre").value;
+                var dire = document.getElementById("Dire").value;
+                var pass = document.getElementById("pass").value;
+                if(boleta != "" && nombre != "" && dire != "" && pass != ""){
+                    $.ajax({
+                        url: "scripts/insert.php",
+                        type: "POST",
+                        cache: false,
+                        data: data,
+                        success: function(data)
+                        {
+                            if(data == 1)
+                                {
+                                    alert("Se realizó correctamente el registro");
+                                    window.location.href = "signin.html";
+                                }
+                            else
+                                {
+                                    alert("No se pudo hacer el registro, inténtelo nuevamente");
+                                }
+                        },
+                        error: function(){
+                            alert('ERROR');
+                            }
+                        });
+                }
+                return false;
+            });
+        }
+    </script>
 </head>
 <body>
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" id="logo"><img src="images/logoESCA.png" alt="Logo"></a>
+				<a href="index.html" id="logo"><img src="images/logo.png" alt="Logo" height=60></a>
+                <span id="school">ESCA TEPEPAN</span>
 				<ul id="navigation">
-					<li class="selected">
+					<li>
 						<a href="index.html">Inicio</a>
 					</li>
-					<li>
+					<li  class="selected">
 						<a href="registro.html">Registro</a>
 					</li>
 					<li>
@@ -66,52 +64,47 @@ function registro(){
 			</div>
 			<span class="shadow"></span>
 		</div>
-		<div id="contents">
-			<div id="contact">
-				<form method="post" name="myForm" id="myForm">
-					<h2>Registro</h2>
-					<label>Boleta</label>
-					<input type="text" value="" class="txtfield" name="Boleta" id="Boleta" required>
-					<label>Nombre</label>
-					<input type="text" value="" class="txtfield" name="Nombre" id="Nombre" required>
-					<label>Dirección</label>
-					<input type="text" value="" class="txtfield" name="Dire" id="Dire" required>
-                    <label>Teléfono</label>
-					<input type="text" value="" class="txtfield" name="Tel" id="Tel">
-                    <label>Status</label>
-                    <select name="status" id="Status">
-                        <option value="Regular">Regular</option>
-                        <option value="Irregular">Irregular</option>
-                    </select>
-                    <label>Promedio</label>
-					<input type="text" value="" class="txtfield" name="prom" id="prom">
-                    <label>Correo electrónico</label>
-					<input type="email" value="" class="txtfield" name="correo" id="correo">
-                    <label>Contraseña</label>
-					<input type="password" value="" class="txtfield" name="pass" id="pass" required>
-                    <label>Clave de la carrera</label>
-					<select name="cve_carrera" id="cve_carrera">
-                        <option value="N">N</option>
-                        <option value="I">I</option>
-                        <option value="C">C</option>
-                        <option value="A">A</option>
-                        <option value="T">T</option>
-                    </select>
-                    <label>Plan de estudios</label>
-                    <select name="plan" id="plan">
-                        <option value="01">01</option>
-                        <option value="02">02</option>
-                        <option value="03">03</option>
-                        <option value="04">04</option>
-                        <option value="05">05</option>
-                        <option value="06">06</option>
-                        <option value="07">07</option>
-                    </select>
-                    <label>Nombre del tutor</label>
-					<input type="text" value="" class="txtfield" name="tutor" id="tutor">
-					<input type="submit" value="Registrarse" class="btn" name="submit" onclick="registro()">
-				</form>
-			</div>
+        <div id="contents">
+            <div id="body">
+                <h2>Registro</h2>
+                <div id="forms">
+                    <form method="post" name="myForm" id="myForm">
+                        <label>Boleta</label>
+                        <input type="text" value="" class="txtfield" name="Boleta" id="Boleta" required>
+                        <label>Nombre</label>
+                        <input type="text" value="" class="txtfield" name="Nombre" id="Nombre" required>
+					   <label>Dirección</label>
+                        <input type="text" value="" class="txtfield" name="Dire" id="Dire" required>
+                        <label>Teléfono</label>
+                        <input type="text" value="" class="txtfield" name="Tel" id="Tel">
+                        <label>Correo electrónico</label>
+                        <input type="email" value="" class="txtfield" name="correo" id="correo">
+                        <label>Contraseña</label>
+                        <input type="password" value="" class="txtfield" name="pass" id="pass" required>
+                        <label>Clave de la carrera</label>
+                        <select name="cve_carrera" id="cve_carrera">
+                            <option value="N">N</option>
+                            <option value="I">I</option>
+                            <option value="C">C</option>
+                            <option value="A">A</option>
+                            <option value="T">T</option>
+                        </select>
+                        <label>Plan de estudios</label>
+                        <select name="plan" id="plan">
+                            <option value="01">01</option>
+                            <option value="02">02</option>
+                            <option value="03">03</option>
+                            <option value="04">04</option>
+                            <option value="05">05</option>
+                            <option value="06">06</option>
+                            <option value="07">07</option>
+                        </select>
+                        <label>Nombre del tutor</label>
+                        <input type="text" value="" class="txtfield" name="tutor" id="tutor">
+                        <input type="submit" value="Registrarse" class="btn" name="submit" onclick="registro()">
+                    </form>
+                </div>
+            </div>
 		</div>
 		<div id="footer">
 			<span class="shadow"></span>
@@ -166,5 +159,4 @@ function registro(){
 	</div>
 </body>
 </html>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
