--- a/template.html
+++ b/template.html
@@ -9,7 +9,8 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" id="logo"><img src="images/logoESCA.png" alt="Logo"></a>
+				<a href="index.html" id="logo"><img src="images/logo.png" alt="Logo" height=60></a>
+                <span id="school">ESCA TEPEPAN</span>
 				<ul id="navigation">
 					<li class="selected">
 						<a href="index.html">Inicio</a>
